// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests for RainDetails class render rain details section renders rain details section for rainy edition 1`] = `
<section
  id="rainSection"
>
  <header
    class="rainHeader"
  >
    <h3
      class="rainHeader__headline"
    >
      Rain
    </h3>
    <a
      class="link link--inverted link--sizeS link--hasIcon rainDetails__link"
      href="#rainDetails"
    >
      more
      <svg
        class="icon--plus link__icon"
        height="5px"
        viewBox="0 0 5 5"
        width="5px"
      >
        <rect
          height="1"
          width="5"
          x="0"
          y="2"
        />
        <rect
          height="5"
          width="1"
          x="2"
          y="0"
        />
      </svg>
    </a>
  </header>
  <div
    class="rainInfoPlaceholder rainInfoPlaceholder--yes"
  >
    yes
  </div>
  <div
    class="dialogbox rainDetails dialogbox--stretched"
    id="rainDetails"
  >
    <header
      class="dialogbox__header"
    >
      <h3
        class="dialogbox__headline"
      >
        Rain
      </h3>
      <a
        class="dialogbox__close"
        href="rainDetails"
        title="hide rain details"
      >
        <svg
          class="icon--close link__icon"
          height="10px"
          viewBox="0 0 10 10"
          width="10px"
        >
          <rect
            class="icon--close__line"
            height="2"
            width="12"
            x="-1"
            y="4"
          />
          <rect
            class="icon--close__line"
            height="12"
            width="2"
            x="4"
            y="-1"
          />
        </svg>
      </a>
    </header>
    <ul
      class="rainDetailsList"
    >
      <li
        class="rainDetailsList__item"
      >
        <span
          class="rainDetailsList__day"
        >
          3rd July
        </span>
        <span
          class="rainDetailsList__rain"
        >
          no
        </span>
      </li>
      <li
        class="rainDetailsList__item"
      >
        <span
          class="rainDetailsList__day"
        >
          4th July
        </span>
        <span
          class="rainDetailsList__rain"
        >
          yes
        </span>
      </li>
      <li
        class="rainDetailsList__item"
      >
        <span
          class="rainDetailsList__day"
        >
          5th July
        </span>
        <span
          class="rainDetailsList__rain"
        >
          yes
        </span>
      </li>
      <li
        class="rainDetailsList__item"
      >
        <span
          class="rainDetailsList__day"
        >
          6th July
        </span>
        <span
          class="rainDetailsList__rain"
        >
          no
        </span>
      </li>
    </ul>
  </div>
</section>
`;

exports[`tests for RainDetails class render rain details section renders rain details section for sunny edition 1`] = `
<section
  id="rainSection"
>
  <header
    class="rainHeader"
  >
    <h3
      class="rainHeader__headline"
    >
      Rain
    </h3>
  </header>
  <div
    class="rainInfoPlaceholder rainInfoPlaceholder--no"
  >
    no
  </div>
</section>
`;

exports[`tests for RainDetails class update rain details section update rain day details: from rainy to rainy 1`] = `
<div
  class="dialogbox rainDetails dialogbox--stretched"
  id="rainDetails"
>
  <header
    class="dialogbox__header"
  >
    <h3
      class="dialogbox__headline"
    >
      Rain
    </h3>
    <a
      class="dialogbox__close"
      href="rainDetails"
      title="hide rain details"
    >
      <svg
        class="icon--close link__icon"
        height="10px"
        viewBox="0 0 10 10"
        width="10px"
      >
        <rect
          class="icon--close__line"
          height="2"
          width="12"
          x="-1"
          y="4"
        />
        <rect
          class="icon--close__line"
          height="12"
          width="2"
          x="4"
          y="-1"
        />
      </svg>
    </a>
  </header>
  <ul
    class="rainDetailsList"
  >
    <li
      class="rainDetailsList__item"
    >
      <span
        class="rainDetailsList__day"
      >
        2nd July
      </span>
      <span
        class="rainDetailsList__rain"
      >
        yes
      </span>
    </li>
    <li
      class="rainDetailsList__item"
    >
      <span
        class="rainDetailsList__day"
      >
        3rd July
      </span>
      <span
        class="rainDetailsList__rain"
      >
        no
      </span>
    </li>
  </ul>
</div>
`;

exports[`tests for RainDetails class update rain details section uptade rain info 1`] = `
<div
  class="rainInfoPlaceholder rainInfoPlaceholder--no"
>
  no
</div>
`;
